<?xml version="1.0"?>
<package format="2">
  <name>rc_roi_manager_gui</name>
  <version>3.0.0</version>
  <description>The ros client for the region of interest manager of the itempick and boxpick modules</description>

  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rc_roi_manager_gui</url>
  <url type="repository">https://github.com/roboception/rc_visard_ros</url>
  <url type="bugtracker">https://github.com/roboception/rc_visard_ros/issues</url>

  <author email="carlos.garcia@roboception.de">Carlos Xavier Garcia Briones</author>

  <!-- system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>wxwidgets</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>interactive_markers</depend>

  <depend>rc_common_msgs</depend>
  <depend>rc_pick_client</depend>

  <doc_depend>doxygen</doc_depend>
</package>
