<?xml version="1.0"?>
<package format="2">
  <name>rc_visard_description</name>
  <version>1.0.0</version>
  <description>Visualization package for rc_visard </description>
   
  <author>Monika Florek-Jasinska</author>
  <maintainer email="monika.florek-jasinska@roboception.de">Monika Florek-Jasinska</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
