<?xml version="1.0"?>
<package format="2">
  <name>rc_visard_description</name>
  <version>2.0.0</version>
  <description>Visualization package for rc_visard </description>

  <maintainer email="monika.florek-jasinska@roboception.de">Monika Florek-Jasinska</maintainer>
  <author email="monika.florek-jasinska@roboception.de">Monika Florek-Jasinska</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
